DTOs, mappers, repositories, services.